--- a/package.json
+++ b/package.json
@@ -9,43 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ethereum-attestation-service/eas-sdk": "^2.6.0",
-    "@helia/unixfs": "^3.0.7",
     "@reown/appkit": "^1.0.4",
     "@reown/appkit-adapter-wagmi": "^1.0.4",
-    "@tanstack/react-query": "^5.56.2",
-    "@web3auth/base": "^9.0.2",
-    "@web3auth/default-evm-adapter": "^9.1.0",
-    "@web3auth/ethereum-provider": "^9.0.2",
-    "@web3auth/modal": "^9.0.2",
-    "@web3modal/wagmi": "^5.1.10",
-    "dayjs": "^1.11.13",
-    "echarts": "^5.5.1",
+    "@tanstack/react-query": "^5.0.0",
+    "autoprefixer": "^10.0.1",
+    "buffer": "^6.0.3",
+    "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "fast-sha256": "^1.3.0",
-    "helia": "^4.2.6",
-    "idb": "^8.0.0",
-    "jszip": "^3.10.1",
-    "lucide-react": "^0.441.0",
+    "lucide-react": "^0.294.0",
     "muse-js": "^3.3.0",
-    "next": "^14.2.11",
-    "next-auth": "^4.24.7",
-    "pino-pretty": "^11.2.2",
+    "next": "14.0.4",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^10.0.0",
-    "viem": "^2.21.15",
-    "wagmi": "^2.12.17",
-    "web3": "^4.13.0"
+    "tailwindcss": "^3.3.0",
+    "uuid": "^9.0.1",
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "14.0.4",
     "typescript": "^5"
   }
 }
